fix: bg color (stretch the background on two block header and start screen); add the font on header logo; add scroll-behavior: smooth

--- a/shelter/pages/page1/scss/style.scss
+++ b/shelter/pages/page1/scss/style.scss
@@ -1,12 +1,12 @@
 @font-face {
     font-family: 'Arial';
-    src: url("../../assets/fonts/Arial/arial.ttf");
+    src: url("../../../assets/fonts/arial.ttf");
     font-weight: 400;
 }
 
 @font-face {
     font-family: 'Georgia';
-    src: url("../../assets/fonts/Georgia/georgia.ttf");
+    src: url("../../../assets/fonts/georgia.ttf");
     font-weight: 400;
 }   
 
@@ -35,6 +35,7 @@ $mobile-width: 320px;
 * {
     box-sizing: border-box;
     margin: 0 auto;
+    scroll-behavior: smooth;
   }
   
 body {
@@ -43,12 +44,8 @@ body {
 }
 
 .start-screen {
-    // background-image: $color-gradient;
     background: url(../../../assets/img/noise_transparent@2x.png), $color-gradient;
-//    background: url(../../../assets/img/noise_transparent@2x.png), 
-//    radial-gradient(110.67% 538.64% at 5.73% 50%, #513D2F 0%, #1A1A1C 100%), #211F20;
-    position: relative;
-    z-index: 10;
+    padding-top: 120px; // для выравнивания фона между header и start-screen
 }
 
 .start-screen-wrapper {
@@ -76,10 +73,10 @@ body {
 }
 
 .header {
-    background: url(../../../assets/img/noise_transparent@2x.png), $color-gradient;
-    z-index: 1;
-    position: relative;
-    padding: 60px 0 0 0;
+   // background: url(../../../assets/img/noise_transparent@2x.png), $color-gradient;
+    position: absolute; // убрала bg и добавила position: absolute; для выравнивания фона. 
+    //добавила padding-left: 175px; в header и padding-top: 120px; в start-screen
+    padding: 60px 0 0 175px;
 }
 
 .header-wrapper {
@@ -99,11 +96,11 @@ body {
     //   flex-wrap: nowrap;
       flex-direction: column;
      // text-align: start;
-      padding-right: 505px;
+      padding-right: 490px;
 }
 
 h1 a {
-    //font-family: 'Georgia';
+    font-family: 'Georgia';
     font-style: normal;
     font-weight: 400;
     font-size: 32px;
@@ -608,7 +605,6 @@ margin-right: 182px;
 
 .footer-wrapper {
     background: url(../../../assets/img/noise_transparent@2x.png), $color-gradient;
-    // margin-top: 40px;
 }
 
 .footer-container {
