--- a/shelter/pages/pets/style2.scss
+++ b/shelter/pages/pets/style2.scss
@@ -1,12 +1,12 @@
 @font-face {
   font-family: 'Arial';
-  src: url("../../assets/fonts/Arial/arial.ttf");
+  src: url("../../assets/fonts/arial.ttf");
   font-weight: 400;
 }
 
 @font-face {
   font-family: 'Georgia';
-  src: url("../../assets/fonts/Georgia/georgia.ttf");
+  src: url("../../assets/fonts/georgia.ttf");
   font-weight: 400;
 }   
 
@@ -34,6 +34,7 @@ $mobile-width: 320px;
 * {
   box-sizing: border-box;
   margin: 0 auto;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -68,13 +69,13 @@ body {
     //  flex-wrap: nowrap;
     flex-direction: column;
    // text-align: start;
-    padding-right: 505px;
+    padding-right: 490px;
     //margin-top: -30px;
     color: $color-dark-l;
 }
 
 h1 a {
-  //font-family: 'Georgia';
+  font-family: 'Georgia';
   font-style: normal;
   font-weight: 400;
   font-size: 32px;
